--- a/index.html
+++ b/index.html
@@ -101,6 +101,9 @@
                 </div>
             </div>
         </section>
+
+                                <!-- about-section  -->
+
         <section>
             <div class="about-section">
                 <div class="about-container">
@@ -122,6 +125,9 @@
         </section>
 
                                     <!-- product-section -->
+
+
+                                    <!-- Top Sale Watches -->
 
 
         <section class="product-section">
@@ -188,6 +194,195 @@
                         <div class="box-container">
                             <div class="img-box">
                                 <img src="img/w3.png" alt="">
+                            </div>
+                            <div class="detail-box">
+                                <div class="price">
+                                    <h4>Men's Watch</h4>
+                                    <h5><span>$</span>300</h5>
+                                </div>
+                                <div class="like">
+                                    <h4>Like</h4>
+                                    <div class="like-icon">
+                                        <i class="fa-solid fa-star"></i>
+                                        <i class="fa-solid fa-star"></i>
+                                        <i class="fa-solid fa-star"></i>
+                                        <i class="fa-solid fa-star"></i>
+                                        <i class="fa-solid fa-star"></i>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="btn-box">
+                            <a href="">Add To Cart</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
+                                        <!-- Feature Watches -->
+
+
+
+        <section class="product-section">
+            <div class="product-container">
+                <div class="product-header">
+                    <h2>Feature Watches</h2>
+                </div>
+                <div class="product-area">
+                    <div class="box">
+                        <div class="box-container">
+                            <div class="img-box">
+                                <img src="img/w4.png" alt="">
+                            </div>
+                            <div class="detail-box">
+                                <div class="price">
+                                    <h4>Men's Watch</h4>
+                                    <h5><span>$</span>300</h5>
+                                </div>
+                                <div class="like">
+                                    <h4>Like</h4>
+                                    <div class="like-icon">
+                                        <i class="fa-solid fa-star"></i>
+                                        <i class="fa-solid fa-star"></i>
+                                        <i class="fa-solid fa-star"></i>
+                                        <i class="fa-solid fa-star"></i>
+                                        <i class="fa-solid fa-star"></i>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="btn-box">
+                            <a href="">Add To Cart</a>
+                        </div>
+                    </div>
+
+                    <div class="box">
+                        <div class="box-container">
+                            <div class="img-box">
+                                <img src="img/w5.png" alt="">
+                            </div>
+                            <div class="detail-box">
+                                <div class="price">
+                                    <h4>Men's Watch</h4>
+                                    <h5><span>$</span>300</h5>
+                                </div>
+                                <div class="like">
+                                    <h4>Like</h4>
+                                    <div class="like-icon">
+                                        <i class="fa-solid fa-star"></i>
+                                        <i class="fa-solid fa-star"></i>
+                                        <i class="fa-solid fa-star"></i>
+                                        <i class="fa-solid fa-star"></i>
+                                        <i class="fa-solid fa-star"></i>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="btn-box">
+                            <a href="">Add To Cart</a>
+                        </div>
+                    </div>
+
+                    <div class="box">
+                        <div class="box-container">
+                            <div class="img-box">
+                                <img src="img/w6.png" alt="">
+                            </div>
+                            <div class="detail-box">
+                                <div class="price">
+                                    <h4>Men's Watch</h4>
+                                    <h5><span>$</span>300</h5>
+                                </div>
+                                <div class="like">
+                                    <h4>Like</h4>
+                                    <div class="like-icon">
+                                        <i class="fa-solid fa-star"></i>
+                                        <i class="fa-solid fa-star"></i>
+                                        <i class="fa-solid fa-star"></i>
+                                        <i class="fa-solid fa-star"></i>
+                                        <i class="fa-solid fa-star"></i>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="btn-box">
+                            <a href="">Add To Cart</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
+                                        <!-- New Arrivals -->
+
+
+        <section class="product-section">
+            <div class="product-container">
+                <div class="product-header">
+                    <h2>New Arrivals</h2>
+                </div>
+                <div class="product-area">
+                    <div class="box">
+                        <div class="box-container">
+                            <div class="img-box">
+                                <img src="img/w7.png" alt="">
+                            </div>
+                            <div class="detail-box">
+                                <div class="price">
+                                    <h4>Men's Watch</h4>
+                                    <h5><span>$</span>300</h5>
+                                </div>
+                                <div class="like">
+                                    <h4>Like</h4>
+                                    <div class="like-icon">
+                                        <i class="fa-solid fa-star"></i>
+                                        <i class="fa-solid fa-star"></i>
+                                        <i class="fa-solid fa-star"></i>
+                                        <i class="fa-solid fa-star"></i>
+                                        <i class="fa-solid fa-star"></i>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="btn-box">
+                            <a href="">Add To Cart</a>
+                        </div>
+                    </div>
+
+                    <div class="box">
+                        <div class="box-container">
+                            <div class="img-box">
+                                <img src="img/w8.png" alt="">
+                            </div>
+                            <div class="detail-box">
+                                <div class="price">
+                                    <h4>Men's Watch</h4>
+                                    <h5><span>$</span>300</h5>
+                                </div>
+                                <div class="like">
+                                    <h4>Like</h4>
+                                    <div class="like-icon">
+                                        <i class="fa-solid fa-star"></i>
+                                        <i class="fa-solid fa-star"></i>
+                                        <i class="fa-solid fa-star"></i>
+                                        <i class="fa-solid fa-star"></i>
+                                        <i class="fa-solid fa-star"></i>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="btn-box">
+                            <a href="">Add To Cart</a>
+                        </div>
+                    </div>
+
+                    <div class="box">
+                        <div class="box-container">
+                            <div class="img-box">
+                                <img src="img/w9.png" alt="">
                             </div>
                             <div class="detail-box">
                                 <div class="price">
